--- a/indexadmi.html
+++ b/indexadmi.html
@@ -28,7 +28,7 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-									  <h1>¡¡Bienvenido Administrador "Nombre"!!</h1>
+									  <h1>¡¡Bienvenido!!</h1>
 									</header>
 
 									<span class="image main"></span>
