--- a/indexadmi.html
+++ b/indexadmi.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Inicio Administrador</title>
+		<title>Hola</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!--[if lte IE 8]><script src="./assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -39,7 +39,7 @@
 									<p>Has buscado alguna vez un hotel en Internet? has visto la cantidad de precios diferentes que hay para la misma habitación? trivago te ayuda a comparar los precios de mas de 700 mil hoteles en mas de 175 paginas web, en vez de perder tiempo y dinero, trivago te lo hace fácil para que encuentres tu hotel ideal... .al mejor precio, solo entra a trivago.com y escribe tu destino, selecciona en dos clics la fecha de llegada y salida... así de simple, trivago busca al instante entre cientos de paginas web y te muestra los hoteles disponibles, selecciona el precio máximo que quieres gastar, elige el numero de estrellas, o filtra por las puntuaciones de los usuarios, trivago te muestras los diferentes precios disponibles para una misma habitación, así puedes estar seguro de encontrar tu hotel ideal.. al mejor precio, hotel? trivago. </p>
 								</section>
                                 <section><center>
-<p><a href="http://www.ipn.mx/" itemprop="url"> INSTITUTO POLITÉCNICO NACIONAL </a></p>
+<p><a href="http://www.ipn.mx/" itemprop="url"> HOLA </a></p>
 <p>D.R. Instituto Politécnico Nacional (IPN), Av. Luis Enrique Erro S/N, Unidad Profesional Adolfo López Mateos, Zacatenco, Delegación Gustavo A. Madero, C.P. 07738, Ciudad de México; México 2009-2013.</p>
 
 <p>Esta página es una obra intelectual protegida por la Ley Federal del Derecho de Autor, puede ser reproducida con fines no lucrativos, siempre y cuando no se mutile, se cite la fuente completa y su dirección electrónica; su uso para otros fines, requiere autorización previa y por escrito de la Dirección General del Instituto.</p>
