--- a/indexadmi.html
+++ b/indexadmi.html
@@ -35,7 +35,7 @@
 									
 								</section>
                                 <section><center>
-<p><a href="http://www.ipn.mx/" itemprop="url"> HOLA </a></p>
+<p><a href="http://www.ipn.mx/" itemprop="url"> HOLA 2 </a></p>
 </section>
 
 						</div>
